fixed alignment of service card elements

--- a/src/components/ServiceCard/serviceCard.scss
+++ b/src/components/ServiceCard/serviceCard.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 
   margin: 0 20px 8px 20px;
 
